# cmth

./: .ec  .sym  CMakeLists.txt  Makefile  cmthConfig.cmake.in
include/: calc.h  ec.h
src/: calc.c
test/: CMakeLists.txt  calc.c
